// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clicking on close button closes modal 1`] = `
<App>
  <div>
    <Switch />
    <Footer>
      <footer
        className="footer"
        id="footer"
      >
        <div
          className="container"
        >
          <p
            className="text-muted"
          >
            restful-booker-platform v3.0 - Created by 
            <a
              href="http://www.mwtestconsultancy.co.uk"
            >
              Mark Winteringham
            </a>
             - © 2018 
            <a
              href="/#/cookie"
            >
              Cookie-Policy
            </a>
             - 
            <a
              href="/#/privacy"
            >
              Privacy-Policy
            </a>
             
            <span
              style={
                Object {
                  "float": "right",
                }
              }
            >
              Learn more about 
              <a
                alt="Automation in testing site"
                href="https://automationintesting.com"
              >
                Automation in Testing
              </a>
               here
            </span>
          </p>
        </div>
      </footer>
    </Footer>
  </div>
</App>
`;

exports[`Welcome component appears on initial visit 1`] = `
<div>
  <div>
    <Welcome
      setWelcome={[Function]}
    />
  </div>
  <Switch>
    <Route
      path="/admin/"
      render={[Function]}
    />
    <Route
      component={[Function]}
      exact={true}
      path="/"
    />
    <Route
      component={[Function]}
      exact={true}
      path="/cookie"
    />
    <Route
      component={[Function]}
      exact={true}
      path="/privacy"
    />
  </Switch>
  <Footer />
</div>
`;

exports[`Welcome component contains correct details 1`] = `
<Popup
  arrow={true}
  arrowStyle={Object {}}
  className=""
  closeOnDocumentClick={false}
  closeOnEscape={false}
  contentStyle={Object {}}
  defaultOpen={true}
  disabled={false}
  keepTooltipInside={false}
  lockScroll={false}
  modal={true}
  mouseEnterDelay={100}
  mouseLeaveDelay={100}
  offsetX={0}
  offsetY={0}
  on={
    Array [
      "click",
    ]
  }
  onClose={[Function]}
  onOpen={[Function]}
  open={false}
  overlayStyle={Object {}}
  position="bottom center"
  trigger={null}
>
  <div
    className="modal-body welcome"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-sm-1"
        />
        <div
          className="col-sm-10 content"
        >
          <br />
          <br />
          <h2>
            Welcome to Restful Booker Platform
          </h2>
          <br />
          <br />
          <h4>
            Your one stop shop to practise Software Testing!
          </h4>
        </div>
        <div
          className="col-sm-1"
        />
      </div>
      <div
        className="row justify-content-center"
      >
        <div
          className="col-sm-3"
        />
        <div>
          <div
            className="btn-group mr-2"
            role="group"
          >
            <button
              className="btn btn-outline-primary disabled"
              id="prev"
              onClick={[Function]}
            >
              Prev
            </button>
            <button
              className="btn btn-outline-primary"
              id="next"
              onClick={[Function]}
            >
              Next
            </button>
          </div>
        </div>
        <div
          className="col-sm-3"
        />
      </div>
    </div>
  </div>
</Popup>
`;

exports[`Welcome component doesnt appear after close 1`] = `
<div>
  <Switch>
    <Route
      path="/admin/"
      render={[Function]}
    />
    <Route
      component={[Function]}
      exact={true}
      path="/"
    />
    <Route
      component={[Function]}
      exact={true}
      path="/cookie"
    />
    <Route
      component={[Function]}
      exact={true}
      path="/privacy"
    />
  </Switch>
  <Footer />
</div>
`;
